added resume feature
added resume feature

--- a/app/src/main/res/layout-land/activity_playground.xml
+++ b/app/src/main/res/layout-land/activity_playground.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
 
     <TextView
         android:layout_width="wrap_content"
@@ -11,6 +16,30 @@
         android:id="@+id/topTitle"
         android:layout_gravity="center_horizontal"
         android:padding="1dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Points:"
+            android:id="@+id/pTitle"
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="20dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="0"
+            android:id="@+id/score"
+            android:layout_gravity="center_horizontal" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <LinearLayout
     android:orientation="horizontal"
@@ -168,20 +197,5 @@
             android:src="@drawable/back" />
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Points:"
-        android:id="@+id/pTitle"
-        android:layout_gravity="center_horizontal"
-        android:paddingTop="20dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="0"
-        android:id="@+id/score"
-        android:layout_gravity="center_horizontal" />
+    </LinearLayout>
 </LinearLayout>
